#1 Config build.gradle.kts plugins and dependencies